--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ h2 {
 
 .contact button {
   padding: 10px;
-  background: #ff914d;
+  background: #30556f;
   color: white;
   border: none;
   cursor: pointer;
